# orbit-runtime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  agent-test-studio-smoke.py  combined-studios-smoke.py  runtime-studio-smoke.py
agent_runtime_ffi/: Cargo.toml  README.md
agent_runtime_ffi/docs/: README.md
agent_runtime_ffi/docs/en/: 01-runtime-ffi-usage-guide.md  02-runtime-cluster-config-contract.md  03-runtime-provider-config-contract.md  04-runtime-conversation-lifecycle-contract.md  05-runtime-event-format.md  06-runtime-frontend-message-contract.md  07-runtime-persistence-and-recovery-contract.md  08-runtime-diagnostics-contract.md  09-runtime-rpc-tool-authoring-guide.md  10-runtime-skill-authoring-guide.md  11-runtime-workflow-execution-contract.md
agent_runtime_ffi/docs/zh/: 01-runtime-ffi-usage-guide.md  02-runtime-cluster-config-contract.md  03-runtime-provider-config-contract.md  04-runtime-conversation-lifecycle-contract.md  05-runtime-event-format.md  06-runtime-frontend-message-contract.md  07-runtime-persistence-and-recovery-contract.md  08-runtime-diagnostics-contract.md  09-runtime-rpc-tool-authoring-guide.md  10-runtime-skill-authoring-guide.md  11-runtime-workflow-execution-contract.md
agent_runtime_ffi/frontend/agent-test-studio/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
agent_runtime_ffi/frontend/shared/: runtimeChat.ts  studioConversation.ts
agent_runtime_ffi/frontend/workflow-studio/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
agent_runtime_ffi/include/: agent_runtime.h
agent_runtime_ffi/src/: lib.rs  runtime.rs  workflow_studio.rs
agent_runtime_ffi/src/agent_test_studio/: conclusion.rs  controller.rs  event_observer.rs  mod.rs  pair_builder.rs  pair_runtime.rs  role_contract.rs  server.rs  systems.rs  tool_runtime.rs  tools.rs
agent_runtime_ffi/src/runtime/: agent_cluster.rs  agent_test_host.rs  config.rs  conversation.rs  conversation_operations.rs  coordination.rs  events.rs  llm.rs  provider_management.rs  recovery.rs  resource_definitions.rs  resources.rs  rpc.rs  tests.rs  tool_definitions.rs  workflow_node_definitions.rs  workflow_operations.rs
ai-assistant/: Cargo.toml  README.md  build.rs
ai-assistant/docs/: README.md
ai-assistant/docs/en/: 01_architecture.md  02_state_machine_and_conversation_engine.md  03_exec_line_protocol_and_tool_execution.md  04_skill_system_and_prompts.md  05_agent_and_persistence.md  06_runtime_mechanics.md  README.md
ai-assistant/docs/zh/: 01_architecture.md  02_state_machine_and_conversation_engine.md  03_exec_line_protocol_and_tool_execution.md  04_skill_system_and_prompts.md  05_agent_and_persistence.md  06_runtime_mechanics.md  README.md
ai-assistant/examples/: runtime_parser_demo.rs  skill_prompt_demo.rs  test_open_explorer.rs  tool_calling_test.rs
ai-assistant/prompts/en/: README.md  active_skills_header.md  active_skills_message.md  asking_section.md  available_tools_header.md  child_agent_persona_header.md  child_agent_tool_scope.md  conversation_summary_context.md  current_instruction_header.md  current_plan.md  default_persona.md  dynamic_context.md  empty_model_response.md  empty_runtime_response.md  empty_visible_response.md  env_context.md  frontend_widget_protocol.md  function_calling.md  get_skills_list_empty.md  get_skills_list_header.md  history_compact.md  history_compact_user.md  legacy_tool_calls_summary.md  llm_retry_exhausted_display.md  llm_retry_exhausted_suggestion.md  max_auto_steps.md  max_rounds_fallback.md  plan_execution_rules.md  recording_chain.md  recording_chain_empty.md  retry_empty_response.md  retry_invalid_response.md  runtime_context.md  runtime_error_response.md  skill_active_suffix.md  skill_prompt_header.md  skill_reference_header.md  skills_catalog_header.md  skills_catalog_preamble.md  state_default.md  (+15 more)
ai-assistant/prompts/zh/: active_skills_header.md  active_skills_message.md  asking_section.md  available_tools_header.md  child_agent_persona_header.md  child_agent_tool_scope.md  conversation_summary_context.md  current_instruction_header.md  current_plan.md  (+50 more)
ai-assistant/src/: admission.rs  assistant.rs  config_resolver.rs  context.rs  conversation.rs  conversation_manager.rs  conversation_state.rs  decision.rs  decision_line.rs  error.rs  events.rs  gateway.rs  ledger.rs  lib.rs  permission.rs  persistence.rs  prompt_assets.rs  response_guard.rs  retrieval.rs  runtime_tools.rs  snapshot.rs  state_machine.rs  tool_runner.rs
ai-gateway/: Cargo.toml  README.md
ai-gateway/config/: builtin_models.json
ai-gateway/docs/: 01_architecture.md
ai-gateway/examples/: test_minimax_fc.rs  test_minimax_hello.rs  test_models.rs  test_tool_role.rs  test_vlm_video.rs
ai-gateway/src/: anthropic_compat.rs  asr.rs  classify.rs  config.rs  diagnostics.rs  dispatch.rs  error.rs  key_store.rs  lib.rs  ocr.rs  openai_compat.rs  providers.rs  request_context.rs  retry.rs  types.rs  vlm.rs
corework/: Cargo.toml  README.md  build.rs
corework/benches/: runtime_state_concurrency.rs
corework/buns_macros/: Cargo.toml
corework/docs/: README.md
corework/examples/: ai_system_demo.rs  basic_test.rs  blueprint_test.rs  cache_cleanup_test.rs  chain_compiler_test.rs  chain_compiler_v2_test.rs  chain_error_smoke.rs  metadata_test.rs  python_rpc_tool_server.py  rpc_tool_client_demo.rs  runtime_state_load.rs  test_object_cache.rs
corework/proto/: corework_agent_tool_v1.proto
corework/src/: ai_system.rs  cache.rs  common_tools.rs  data_type.rs  error.rs  event.rs  event_line.rs  execution_unit.rs  hierarchical_cache.rs  instance.rs  lib.rs  module.rs  monitoring.rs  orchestration.rs  retry.rs  rpc_proto.rs  rpc_tool.rs  saga.rs  scoped_cache.rs  system.rs  workspace.rs  world.rs
corework/tests/: ai_system_tests.rs  core_contract_tests.rs  test_array_object_nodes.rs  test_field_path_access.json  test_field_path_access.py  test_field_path_access.rs  test_field_path_simple.json  test_nested_loop_break.rs  test_state_machine_post_event.rs  workflow_variable_scope.rs
(+369 files in other folders)
