[workspace]
members = [
    "corework",
    "corework/buns_macros",
    "ai-gateway",
    "ai-assistant",
    "agent_runtime_ffi",
]
resolver = "2"

# Shared versions for crates in this repository.
[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
async-trait = "0.1"
inventory   = "0.3"
tracing     = "0.1"
thiserror   = "1.0"
anyhow      = "1.0"
parking_lot = "0.12"
chrono      = { version = "0.4", features = ["serde"] }
