[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"
authors = ["寻乌洋葱科技有限公司"]
description = "Config-driven LLM gateway supporting OpenAI-compatible providers (DeepSeek, Qwen, Doubao, MiniMax, Kimi, GLM, Yi, Step, etc.) with multimodal (VLM/ASR/OCR) support"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kouryu339/orbit-runtime"

[dependencies]
# Corework 框架（buns_system 宏 + inventory）
corework = { path = "../corework", default-features = false, features = ["memory-event-bus", "metrics", "type_structure"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端（multipart 供 ASR 文件上传）
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# 流式响应解析（P3-0）
futures-util = "0.3"

# Base64 编码（图片/音频上传）
base64 = "0.22"

# 图像尺寸读取（OCR 返回 image_size）
image = "0.25"

# 装饰器自动注册
inventory = "0.3"

# 错误处理
thiserror = "1.0"

# 日志
tracing = "0.1"

# 静态一次性初始化
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]

[[example]]
name = "test_tool_role"
path = "examples/test_tool_role.rs"

[[example]]
name = "test_models"
path = "examples/test_models.rs"

[[example]]
name = "test_vlm_video"
path = "examples/test_vlm_video.rs"

[[example]]
name = "test_minimax_fc"
path = "examples/test_minimax_fc.rs"

[[example]]
name = "test_minimax_hello"
path = "examples/test_minimax_hello.rs"
