[package]
name = "buns_macros"
version = "0.1.0"
edition = "2021"
authors = ["寻乌洋葱科技有限公司"]
description = "Procedural macros for Corework systems, models, and workflow nodes"
license = "Apache-2.0"
repository = "https://github.com/kouryu339/orbit-runtime"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
