[package]
name = "shop_business"
version = "0.1.0"
edition = "2021"

[dependencies]
corework = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
